--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "vscode-leetcode",
-    "displayName": "LeetCode",
-    "description": "Solve LeetCode problems in VS Code",
-    "version": "0.16.1",
-    "author": "Sheng Chen",
-    "publisher": "shengchen",
+    "name": "debug-leetcode",
+    "displayName": "Debug LeetCode",
+    "description": "Solve LeetCode problems in VS Code and enjoy debugging",
+    "version": "0.1.0",
+    "author": "wangtao0101",
+    "publisher": "wangtao0101",
     "license": "MIT",
     "icon": "resources/LeetCode.png",
     "engines": {
@@ -12,9 +12,9 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/jdneo/vscode-leetcode"
+        "url": "https://github.com/wangtao0101/vscode-leetcode"
     },
-    "homepage": "https://github.com/jdneo/vscode-leetcode/blob/master/README.md",
+    "homepage": "https://github.com/wangtao0101/vscode-leetcode/blob/master/README.md",
     "categories": [
         "Other",
         "Snippets"
