feat: support parse ListNode and ListNode[]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,11 @@
         ".prettierrc": "yaml",
         "cjson.c": "cpp",
         "iostream": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "array": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp",
+        "new": "cpp"
     }
 }
